--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,38 @@
-/* ------- universal styling ------- */
+/* ------------ universal styling ------------ */
+:root {
+  --heading-font: "Paytone One", sans-serif;
+  --text-font: "Lexend", sans-serif;
+  --text-color: white;
+
+  --dev-primary-color: rgba(44, 22, 65, 1);
+  --dev-primary-color-transparent: rgba(44, 22, 65, 0.635);
+  --dev-secondary-color: rgba(74, 58, 158, 1);
+  --dev-accent-color: rgb(171, 171, 241);
+  --dev-accent-color2: rgba(0, 128, 249, 1);
+
+  --des-primary-color: rgba(253, 81, 118, 1);
+  --des-primary-color-transparent: rgba(253, 81, 118, 0.635);
+  --des-secondary-color: rgba(134, 58, 168, 1);
+  --des-accent-color: rgb(255, 215, 75);
+  --des-accent-color2: rgba(250, 150, 36, 1);
+
+  --mixed-primary-color: rgb(44, 27, 79);
+}
+
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 html {
   height: 100vh;
-  scroll-behavior: smooth;
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 
 ::selection {
-  background-color: #2c1b4f;
+  background-color: var(--mixed-primary-color);
 }
 
 .App,
@@ -23,48 +43,58 @@ body {
 }
 
 .App {
-  overflow: scroll;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  position: relative;
+  overflow: scroll;
 }
 
+/* Dev background colors */
 body {
-  background: rgb(44, 22, 65); /* fallback for older browsers */
+  background: var(--dev-primary-color); /* fallback for older browsers */
   background: radial-gradient(
     circle,
-    rgba(44, 22, 65, 1) 20%,
-    rgba(74, 58, 158, 1) 100%
+    var(--dev-primary-color) 20%,
+    var(--dev-secondary-color) 100%
   );
-  color: white;
-  transition: 300ms linear;
-  font-family: "Lexend", sans-serif;
+  color: var(--text-color);
+  font-family: var(--text-font);
 }
 
+/* Designer background colors */
 body.designMode {
-  background: rgb(134, 58, 168); /* fallback for older browsers */
+  background: var(--des-secondary-color); /* fallback for older browsers */
   background: radial-gradient(
     circle,
-    rgba(134, 58, 168, 1) 20%,
-    rgba(253, 81, 118, 1) 100%
+    var(--des-secondary-color) 20%,
+    var(--des-primary-color) 100%
   );
 }
 
+/* ------------ text styling ------------ */
 h1,
 h2,
-h3 {
-  font-family: "Paytone One", sans-serif;
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font);
 }
 
 h1 {
-  text-align: center;
-  margin: 2%;
-  text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 15vw;
 }
 
-h3 {
+h2 {
+  margin: 1em;
+  font-size: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h4 {
   font-size: 1.2rem;
 }
 
@@ -91,6 +121,7 @@ a {
 @import "components/toggleBar/togglebar.css";
 
 /* Home Page */
+@import "components/homePage/home.css";
 @import "components/homePage/devHome.css";
 @import "components/homePage/designHome.css";
 
