--- a/src/components/homePage/designHome.css
+++ b/src/components/homePage/designHome.css
@@ -1,44 +1,45 @@
+/* ------------ Sky background ------------ */
+/* Fallback for browsers without webp support */
 .no-webp .parallax-container {
-  background: url(../../images/designHome/1skyBackground.png) no-repeat;
-  background-size: 100%;
+  background: url(../../images/designHome/1skyBackground.png) no-repeat top
+    center/100%;
 }
 
 .webp .parallax-container {
-  background: url(../../images/designHome/1skyBackground.webp) no-repeat;
-  background-size: 100%;
+  background: url(../../images/designHome/1skyBackground.webp) no-repeat top
+    center/100%;
 }
 
 .parallax-container {
-  position: relative;
   overflow: hidden;
 }
 
+/* Fade effect */
 .parallax-container::after {
-  content: " ";
-  position: absolute;
+  height: 8%;
   background: linear-gradient(
     0deg,
-    rgba(250, 150, 36, 1) 0%,
-    rgba(0, 128, 249, 0) 100%
+    var(--des-accent-color2) 0%,
+    transparent 100%
   );
-  height: 8%;
-  width: 100%;
-  bottom: 0;
-  left: 0;
 }
 
-.parallax-container #scene .layer img {
+#scene img {
   width: 100%;
 }
 
+/* ------------ Midground trees ------------ */
 .trees {
   position: relative;
 }
 
+/* Place a duplicate image of trees to compensate for top parallax cutoff */
 .trees::before {
-  content: "";
   width: 100%;
   height: 5%;
+
+  content: "";
+
   position: absolute;
   top: 0;
   left: 0;
@@ -46,6 +47,7 @@
   z-index: -1;
 }
 
+/* Fallback for browsers without webp support */
 .no-webp .trees::before {
   background: url(../../images/designHome/3treesMidground.png);
   background-size: 100%;
@@ -56,13 +58,20 @@
   background-size: 100%;
 }
 
-.trees::after {
-  content: " ";
-  position: absolute;
-  background-color: rgb(116, 134, 51);
-  height: 10%;
-  width: 150%;
-  bottom: -3%;
-  left: -10%;
-  z-index: -1;
+/* Shack */
+/* Add green shades to cover up bottom cutoff */
+.shack {
+  box-shadow: 0 20px 0 0 rgb(116, 134, 51), inset 0 -20px 10px rgb(116, 134, 51);
+}
+
+/* ------------ Title ------------ */
+.home-title,
+.layer.header {
+  width: 100%;
+  height: 100%;
+}
+
+.home-title {
+  display: grid;
+  place-items: center;
 }
