--- a/src/components/filterMenu/devFilters.css
+++ b/src/components/filterMenu/devFilters.css
@@ -1,30 +1,31 @@
-.filter-menu.dev li label {
-  background: #4a3a9e;
+.filter-menu.dev label {
+  background: var(--dev-secondary-color);
 }
 
-.filter-menu.dev li input:checked ~ label {
-  background: #4b3a9e00;
-  border: 1px solid rgb(171, 171, 241);
-  color: rgb(171, 171, 241);
+.filter-menu.dev label:hover,
+.filter-menu.dev input:checked ~ label {
+  box-shadow: 0 0 0 1px var(--dev-accent-color);
+  color: var(--dev-accent-color);
 }
 
-.filter-menu.dev li label:hover {
-  color: rgb(171, 171, 241);
+.filter-menu.dev input:checked ~ label {
+  background: black;
 }
 
 .circle {
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: black;
+
   position: absolute;
   display: block;
-  width: 0px;
-  height: 0px;
   transform: translate(-50%, -50%);
-  border-radius: 50%;
-  background: #000000;
   transition: width 500ms linear, height 500ms linear;
   z-index: -1;
 }
 
-.filter-menu.dev li label:hover span {
+.filter-menu.dev label:hover .circle {
   width: 250px;
   height: 250px;
 }
