--- a/src/components/aboutPage/about.css
+++ b/src/components/aboutPage/about.css
@@ -1,9 +1,10 @@
 .about-container {
+  padding: var(--section-padding);
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 5em 1.5em;
 }
 
 .about-text {
@@ -16,24 +17,25 @@
   list-style: none;
 }
 
+/* ------------ Avatar ------------ */
 .about-image-container {
-  display: flex;
-  flex-direction: column;
   width: 55%;
   padding: 1em;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .avatar {
-  border-radius: 20px;
   margin-bottom: 1em;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
-
   width: 100%;
+  border-radius: 20px;
+  box-shadow: var(--shadow);
 }
 
 .about-caption {
   text-align: center;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 /* laptops */
