--- a/src/components/contactPage/contact.css
+++ b/src/components/contactPage/contact.css
@@ -1,11 +1,12 @@
 .contact {
+  min-height: 100vh;
+  padding: var(--section-padding);
+
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  padding: 5em 1.5em;
-  min-height: 100vh;
 }
 
 .contact h3 {
@@ -17,24 +18,26 @@
 }
 
 .social-links-container {
+  width: 80%;
+  max-width: 900px;
+
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  width: 80%;
-  max-width: 900px;
 }
 
 .social-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 15%;
   margin: 2%;
-  padding: 2%;
-  text-decoration: none;
+  flex-basis: 15%;
   border-radius: 20px;
+  padding: 2%;
+
+  display: grid;
+  place-items: center;
+  text-decoration: none;
   color: currentColor;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+
+  box-shadow: var(--shadow);
   transition: background-color 500ms linear;
 }
 
