--- a/src/components/contactPage/devContact.css
+++ b/src/components/contactPage/devContact.css
@@ -1,30 +1,33 @@
 .contact.dev {
-  background-color: #4b3a9e;
+  background-color: var(--dev-secondary-color);
 }
 
-.dev .social-links-container .social-item {
-  background-color: #2c1641a2;
+.dev .social-item {
+  background-color: var(--dev-primary-color-transparent);
   position: relative;
 }
 
-.dev .social-links-container .social-item::after {
-  content: " ";
-  position: absolute;
-  top: 5%;
-  bottom: 5%;
-  left: 5%;
-  right: 5%;
-  border: 2px solid rgb(171, 171, 241);
+/* Border */
+.dev .social-item::after {
+  border: 1px solid var(--dev-accent-color);
   border-radius: 20px;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  content: "";
   opacity: 0;
   transition: opacity 500ms linear;
 }
 
-.dev .social-links-container .social-item:hover {
-  background: #000000;
-  color: rgb(171, 171, 241);
+.dev .social-item:hover {
+  background: black;
+  color: var(--dev-accent-color);
 }
 
-.dev .social-links-container .social-item:hover::after {
+.dev .social-item:hover::after {
   opacity: 1;
 }
