--- a/src/components/filterMenu/filterMenu.css
+++ b/src/components/filterMenu/filterMenu.css
@@ -1,25 +1,28 @@
 .filter-menu {
+  margin: 1em;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 1em;
 }
 
 .filter-menu li {
-  list-style: none;
   margin: 0.25em;
+  list-style: none;
   cursor: pointer;
 }
 
-.filter-menu li label {
-  display: inline-block;
-  padding: 1em;
-  text-align: center;
-  transition: background-color 500ms linear;
+.filter-menu label {
   border-radius: 20px;
-  cursor: pointer;
+  padding: 1em;
+
+  /* For black circle effect */
   position: relative;
   z-index: 1;
+
+  display: inline-block;
+  text-align: center;
   overflow: hidden;
+  transition: background-color 500ms linear;
+  cursor: pointer;
 }
