--- a/src/components/navMenu/devNav.css
+++ b/src/components/navMenu/devNav.css
@@ -3,13 +3,12 @@
 }
 
 .toggle-menu.dev .btn:hover {
-  background: transparent;
   color: var(--dev-accent-color);
-  border: 1px solid var(--dev-accent-color);
 }
 
 /* Button tooltip */
 .toggle-menu.dev .btn::before {
-  background: rgba(0, 0, 0, 0.635);
+  background: black;
   color: var(--dev-accent-color);
+  box-shadow: inset 0 0 0 1px var(--dev-accent-color);
 }
