--- a/src/components/projectsPage/devProjects.css
+++ b/src/components/projectsPage/devProjects.css
@@ -7,11 +7,12 @@
 .card-content.dev {
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+
   text-align: center;
   position: relative;
   transition: transform 1s linear;
   transform-style: preserve-3d;
-  border-radius: 20px;
 }
 
 .project-card.dev:hover .card-content {
@@ -22,18 +23,20 @@
 .card-back {
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  border-radius: 20px;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
 }
 
 .card-front picture {
@@ -43,36 +46,39 @@
 .card-front img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 .card-front::before {
+  border: 2px solid var(--dev-accent-color);
+  border-radius: 20px;
   content: "";
+
   position: absolute;
   top: 5%;
   bottom: 5%;
   left: 5%;
   right: 5%;
-  border: 2px solid rgb(171, 171, 241);
-  border-radius: 20px;
   transform: translateZ(8rem);
 }
 
 .front-titles {
-  position: absolute;
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+  padding: 10%;
+  background: var(--dev-primary-color-transparent);
+
+  position: absolute;
+  top: 0;
+  transform: translateZ(3rem);
+  transform-style: preserve-3d;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10%;
-  background-color: #2c16419d;
-  border-radius: 20px;
-  top: 0;
-  transform: translateZ(3rem);
-  transform-style: preserve-3d;
 }
 
 .dev.card-title {
@@ -85,27 +91,30 @@
 
 .card-back {
   transform: rotateY(0.5turn);
-  background-color: #4a3a9e;
+  background: var(--dev-secondary-color);
 }
 
 .card-description {
   height: 55%;
-  overflow: scroll;
   padding: 2em;
+
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  overflow: scroll;
 }
 
 .card-tools {
-  opacity: 0.7;
-  display: inline-flex;
   width: 100%;
-  flex-wrap: wrap;
   padding: 1.5em;
+
+  display: inline-flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+
+  opacity: 0.8;
   font-size: 0.8rem;
 }
 
@@ -115,52 +124,50 @@
 }
 
 .card-links {
+  width: 100%;
+  height: 20%;
+  border-radius: 0 0 20px 20px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 20%;
   justify-self: flex-end;
-  border-radius: 0px 0px 20px 20px;
 }
 
 .demo-link {
   height: 100%;
-  background-color: #4fe0d9d3;
-  border-radius: 0px 0px 0px 20px;
+  border-radius: 0 0 0 20px;
+
+  background-color: rgba(79, 224, 217, 0.827);
 }
 
 .github-link {
   height: 100%;
-  background-color: #0080f9;
-  border-radius: 0px 0px 20px 20px;
+  border-radius: 0 0 20px 20px;
+  background-color: var(--dev-accent-color2);
 }
 
 .demo-link ~ .github-link {
-  height: 100%;
-  background-color: #0080f9;
-  border-radius: 0px 0px 20px 0px;
-}
-
-.demo-link:hover,
-.github-link:hover {
-  background: #000000;
-  color: rgb(171, 171, 241);
+  border-radius: 0 0 20px 0;
 }
 
 .demo-link:active,
 .github-link:active,
 .demo-link:focus,
-.github-link:focus {
-  border: 1px solid rgb(171, 171, 241);
+.github-link:focus,
+.demo-link:hover,
+.github-link:hover {
+  background: black;
+  color: var(--dev-accent-color);
+  box-shadow: 0 0 0 1px var(--dev-accent-color);
 }
 
 /* laptops */
 @media (min-width: 801px) {
   .project-card.dev {
+    margin: 1em;
     width: 45%;
     height: 35vw;
-    margin: 1em;
   }
 }
 
