--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -1,18 +1,19 @@
 .projects {
+  padding: var(--section-padding);
   background: rgba(0, 0, 0, 0.8);
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5em 1.5em;
 }
 
 .projects-container {
+  width: 80%;
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap-reverse;
   justify-content: center;
   align-content: flex-end;
-  width: 80%;
 }
 
 .card-title {
@@ -22,20 +23,22 @@
 
 .card-subtitle {
   padding: 1em;
+  opacity: 0.8;
+
   text-align: center;
   font-weight: 700;
-  opacity: 0.7;
 }
 
 .social-btn {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: currentColor;
   width: 100%;
   padding: 1em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  color: currentColor;
 }
 
 .btn-text {
