--- a/src/components/projectsPage/designProjects.css
+++ b/src/components/projectsPage/designProjects.css
@@ -57,6 +57,16 @@
   color: var(--des-accent-color);
 }
 
+.load-more-btn.des {
+  background: var(--mixed-primary-color); /* fallback for older browsers */
+  background: var(--des-gradient-background);
+}
+
+.load-more-btn.des:hover,
+.load-more-btn.des:focus {
+  background-position: left;
+}
+
 /* tablets */
 @media (min-width: 600px) {
   .card-hover-area {
