--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -10,8 +10,7 @@
 .projects-container {
   width: 80%;
   display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap-reverse;
+  flex-flow: row wrap;
   justify-content: center;
   align-content: flex-end;
 }
@@ -43,6 +42,17 @@
 
 .btn-text {
   padding: 0.5em;
+}
+
+.load-more-btn {
+  margin: 2%;
+  border-radius: 20px;
+  padding: 1.5%;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  color: currentColor;
+  transition: 500ms linear;
 }
 
 /* laptops */
