--- a/src/components/toggleBar/togglebar.css
+++ b/src/components/toggleBar/togglebar.css
@@ -1,35 +1,37 @@
-.toggle-bar-container {
-  width: 100%;
+:root {
+  --toggle-bar-padding: 0.35rem;
+  --toggle-bar-width: 4rem;
+  --toggle-ball-width: 1.25rem;
+}
 
+.toggle-bar-container {
   position: fixed;
-  bottom: 5%;
+  top: 2rem;
+  right: 2rem;
   z-index: 100;
+  height: 2.5rem;
 }
 
 .toggle-bar {
-  width: 15%;
-  height: 2rem;
+  width: var(--toggle-bar-width);
   border-radius: 20px;
-  padding: 0.3em;
+  padding: var(--toggle-bar-padding);
 
   background: var(--mixed-primary-color); /* fallback for older browsers */
   background: linear-gradient(
       90deg,
-      var(--mixed-primary-color) 0%,
-      var(--des-primary-color) 25%,
-      var(--dev-accent-color2) 75%,
-      var(--dev-primary-color) 100%
+      var(--dev-accent-color2) 25%,
+      var(--des-primary-color) 75%
     )
-    right/200%;
+    center/200%;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1rem;
 
   position: relative;
-  left: 50%;
-  transform: translateX(-50%) scale(2);
+  top: 50%;
+  transform: translateY(-50%);
 
   transition: background-position 500ms linear;
   box-shadow: var(--shadow);
@@ -37,36 +39,39 @@
 }
 
 .ball {
-  width: 1.6rem;
-  height: 1.6rem;
+  width: var(--toggle-ball-width);
+  height: var(--toggle-ball-width);
   border-radius: 50%;
   background-color: white;
 
   position: absolute;
   top: 50%;
-  left: 100%;
-  transform: translate(-1.8rem, -50%);
+  left: 0;
+  transform: translate(var(--toggle-bar-padding), -50%);
 
-  transition: left 500ms linear, transform 500ms linear;
+  transition: 500ms linear;
   cursor: pointer;
 }
 
 .fa-pencil-alt {
-  margin-left: 0.12rem;
+  transform: scale(0.95);
 }
 
 /* Togglebar hovered */
-#toggle-checkbox:checked + .toggle-bar:hover,
 .toggle-bar:hover {
-  background-position: center;
+  background-position: right;
 }
 
-/* Togglebar checked */
-#toggle-checkbox:checked + .toggle-bar {
+#toggle-checkbox:checked + .toggle-bar:hover {
   background-position: left;
 }
 
 #toggle-checkbox:checked + .toggle-bar .ball {
-  left: 0;
-  transform: translate(0.2rem, -50%);
+  transform: translate(
+    calc(
+      var(--toggle-bar-width) -
+        (var(--toggle-bar-padding) + var(--toggle-ball-width))
+    ),
+    -50%
+  );
 }
