modified all des buttons to be same color modified all des buttons to have same transition

--- a/src/components/contactPage/contact.css
+++ b/src/components/contactPage/contact.css
@@ -38,7 +38,7 @@
   color: currentColor;
 
   box-shadow: var(--shadow);
-  transition: background-color 500ms linear;
+  transition: 500ms linear;
 }
 
 .social-icon {
