--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -38,6 +38,7 @@
   text-align: center;
   text-decoration: none;
   color: currentColor;
+  transition: 500ms linear;
 }
 
 .btn-text {
@@ -48,7 +49,6 @@
   margin: 2%;
   border-radius: 20px;
   padding: 1.5%;
-  border: none;
   font-size: 1rem;
   cursor: pointer;
   color: currentColor;
