--- a/src/components/contactPage/devContact.css
+++ b/src/components/contactPage/devContact.css
@@ -3,31 +3,13 @@
 }
 
 .dev .social-item {
-  background-color: var(--dev-primary-color-transparent);
+  background-color: var(--dev-accent-color2);
   position: relative;
-}
-
-/* Border */
-.dev .social-item::after {
-  border: 1px solid var(--dev-accent-color);
-  border-radius: 20px;
-
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  content: "";
-  opacity: 0;
-  transition: opacity 500ms linear;
+  border: solid 2px transparent;
 }
 
 .dev .social-item:hover {
   background: black;
   color: var(--dev-accent-color);
-}
-
-.dev .social-item:hover::after {
-  opacity: 1;
+  border-color: var(--dev-accent-color);
 }
