--- a/src/components/projectsPage/designProjects.css
+++ b/src/components/projectsPage/designProjects.css
@@ -1,18 +1,15 @@
 .card-hover-area {
-  margin: 1em 0;
-  width: 100%;
-  height: 85vw;
-
+  flex: 0 1 100%;
   perspective: 1000px;
   display: flex;
-  justify-content: space-evenly;
+justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  gap: 0.75rem;
 }
 
 .project-card.des {
-  height: 75%;
-  width: 100%;
+  flex: 1 0 50%;
 
   transform-style: preserve-3d;
   position: relative;
@@ -46,7 +43,6 @@
 }
 
 .flickr-link {
-  height: 15%;
   border-radius: 20px;
   background: var(--des-accent-color2);
   justify-self: flex-end;
@@ -64,16 +60,18 @@
   background: var(--des-accent-color2);
 }
 
-/* tablets */
 @media (min-width: 600px) {
   .card-hover-area {
-    margin: 2.5% 5%;
-    width: 40%;
-    height: 45vw;
+    flex-basis: 25%;
   }
 }
 
-/* desktop */
+@media (min-width: 801px) and (orientation: landscape) {
+  .card-hover-area {
+    flex-basis: 18%;
+  }
+}
+
 @media (min-width: 1025px) {
   .des.card-content {
     padding: 2em;
