--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -1,18 +1,22 @@
 .projects {
+  flex: 1 0 100%;
   padding: var(--section-padding);
   background: rgba(0, 0, 0, 0.8);
 
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
 }
 
 .projects-container {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-content: flex-end;
+  gap: 1.5rem;
 }
 
 .card-title {
@@ -26,38 +30,33 @@
 
   text-align: center;
   font-weight: 700;
+  display: none;
 }
 
 .social-btn {
   width: 100%;
   padding: 1em;
-
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  gap: 0.5rem;
   text-decoration: none;
   color: currentColor;
   transition: 500ms linear;
 }
 
-.btn-text {
-  padding: 0.5em;
-}
-
 .load-more-btn {
-  margin: 2%;
   border-radius: 20px;
-  padding: 1.5%;
+  padding: 1rem;
   font-size: 1rem;
   cursor: pointer;
   color: currentColor;
   transition: 500ms linear;
 }
 
-/* laptops */
-@media (min-width: 600px) {
-  .projects-container {
-    width: 90%;
+@media (min-width: 801px) {
+  .card-subtitle {
+    display: flex;
   }
 }
