--- a/src/components/filterMenu/devFilters.scss
+++ b/src/components/filterMenu/devFilters.scss
@@ -1,11 +1,11 @@
 .filter-menu.dev label {
-  background-color: var(--dev-accent-color2);
+  background-color: $dev-accent-color2;
 }
 
 .filter-menu.dev label:hover,
 .filter-menu.dev input:checked ~ label {
-  box-shadow: 0 0 0 2px var(--dev-accent-color);
-  color: var(--dev-accent-color);
+  box-shadow: 0 0 0 2px $dev-accent-color;
+  color: $dev-accent-color;
 }
 
 .filter-menu.dev input:checked ~ label {
