--- a/src/components/projectsPage/projects.scss
+++ b/src/components/projectsPage/projects.scss
@@ -1,6 +1,6 @@
 .projects {
   flex: 1 0 100%;
-  padding: var(--section-padding);
+  padding: $section-padding;
   background: rgba(0, 0, 0, 0.8);
 
   display: flex;
