--- a/src/components/toggleBar/togglebar.scss
+++ b/src/components/toggleBar/togglebar.scss
@@ -1,8 +1,6 @@
-:root {
-  --toggle-bar-padding: 0.35rem;
-  --toggle-bar-width: 4rem;
-  --toggle-ball-width: 1.25rem;
-}
+$toggle-bar-padding: 0.35rem;
+$toggle-bar-width: 4rem;
+$toggle-ball-width: 1.25rem;
 
 .toggle-bar-container {
   position: fixed;
@@ -13,15 +11,15 @@
 }
 
 .toggle-bar {
-  width: var(--toggle-bar-width);
+  width: $toggle-bar-width;
   border-radius: 20px;
-  padding: var(--toggle-bar-padding);
+  padding: $toggle-bar-padding;
 
-  background: var(--mixed-primary-color); /* fallback for older browsers */
+  background: $mixed-primary-color; /* fallback for older browsers */
   background: linear-gradient(
       90deg,
-      var(--dev-accent-color2) 25%,
-      var(--des-primary-color) 75%
+      $dev-accent-color2 25%,
+      $des-primary-color 75%
     )
     center/200%;
 
@@ -34,20 +32,20 @@
   transform: translateY(-50%);
 
   transition: background-position 500ms linear;
-  box-shadow: var(--shadow);
+  box-shadow: $shadow;
   cursor: pointer;
 }
 
 .ball {
-  width: var(--toggle-ball-width);
-  height: var(--toggle-ball-width);
+  width: $toggle-ball-width;
+  height: $toggle-ball-width;
   border-radius: 50%;
   background-color: white;
 
   position: absolute;
   top: 50%;
   left: 0;
-  transform: translate(var(--toggle-bar-padding), -50%);
+  transform: translate($toggle-bar-padding, -50%);
 
   transition: 500ms linear;
   cursor: pointer;
@@ -68,10 +66,7 @@
 
 #toggle-checkbox:checked + .toggle-bar .ball {
   transform: translate(
-    calc(
-      var(--toggle-bar-width) -
-        (var(--toggle-bar-padding) + var(--toggle-ball-width))
-    ),
+    calc($toggle-bar-width - ($toggle-bar-padding + $toggle-ball-width)),
     -50%
   );
 }
