added animation for opening and closing nav

--- a/src/App.scss
+++ b/src/App.scss
@@ -111,9 +111,9 @@ a {
 
 /* Component Stylesheets */
 /* Nav Menu */
-@import "components/navMenu/nav.css";
-@import "components/navMenu/designNav.css";
-@import "components/navMenu/devNav.css";
+@import "components/navMenu/nav";
+@import "components/navMenu/designNav";
+@import "components/navMenu/devNav";
 
 /* Togglebar */
 @import "components/toggleBar/togglebar";
