added transition ease variable

--- a/src/components/contactPage/contact.scss
+++ b/src/components/contactPage/contact.scss
@@ -39,7 +39,7 @@
   color: currentColor;
 
   box-shadow: $shadow;
-  transition: 500ms linear;
+  transition: $transition-ease;
 }
 
 /* laptops */
