--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ $des-accent-color: rgb(255, 215, 75);
 $des-accent-color2: rgba(250, 150, 36, 1);
 $mixed-primary-color: rgb(44, 27, 79);
 $shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+$transition-ease: 0.25s ease-in-out;
 
 * {
   margin: 0;
