--- a/src/components/toggleBar/togglebar.scss
+++ b/src/components/toggleBar/togglebar.scss
@@ -31,7 +31,7 @@ $toggle-ball-width: 1.25rem;
   top: 50%;
   transform: translateY(-50%);
 
-  transition: background-position 500ms linear;
+  transition: background-position $transition-ease;
   box-shadow: $shadow;
   cursor: pointer;
 }
@@ -47,7 +47,7 @@ $toggle-ball-width: 1.25rem;
   left: 0;
   transform: translate($toggle-bar-padding, -50%);
 
-  transition: 500ms linear;
+  transition: $transition-ease;
   cursor: pointer;
 }
 
