--- a/src/components/contactPage/contact.scss
+++ b/src/components/contactPage/contact.scss
@@ -33,8 +33,7 @@
   border-radius: 20px;
   padding: 1rem;
 
-  display: grid;
-  place-items: center;
+  @include center-content;
   text-decoration: none;
   color: currentColor;
 
