--- a/src/components/navMenu/designNav.scss
+++ b/src/components/navMenu/designNav.scss
@@ -1,9 +1,4 @@
+.toggle-menu.des .btn::before,
 .toggle-menu.des .btn {
-  background: $des-accent-color2;
-}
-
-.toggle-menu.des .btn:hover::before,
-.toggle-menu.des .btn:hover {
-  background-color: $des-primary-color;
-  color: $des-accent-color;
+  @extend .des-button;
 }
