--- a/src/components/aboutPage/about.scss
+++ b/src/components/aboutPage/about.scss
@@ -33,7 +33,7 @@
 .avatar {
   margin-bottom: 1em;
   width: 100%;
-  border-radius: 20px;
+  border-radius: $rounded-border;
   box-shadow: $shadow;
 }
 
